fixed whitespaces

--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -7,6 +7,10 @@
   .img-hero {
     width: 100%;
     height: auto;
+    translate: 0 24px;
+    margin-top: -30px;
+    height: 900px;
+    z-index: -1000;
   }
   
   .hero-intro {
